--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
   },
   "homepage": "https://github.com/ThomasFerro/dojo-clean-code-solid#readme",
   "devDependencies": {
+    "@types/jest": "^24.0.11",
+    "jest": "^24.7.1",
     "nodemon": "^1.18.11",
+    "ts-jest": "^24.0.2",
     "tslint": "^5.15.0",
     "typescript": "^3.4.3"
   }
